--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 .metadata
-.metadata/*
+
+bin/
+
+tmp/
+
+*.tmp
+
+*.bak
+
+*.swp
+
+*~.nib
+
+local.properties
+
+.settings/
+
+.loadpath
+
+.recommenders
