--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,37 @@
-.metadata
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-bin/
+# Package Files #
+*.jar
+*.war
+*.ear
 
-tmp/
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-*.tmp
-
-*.bak
-
-*.swp
-
-*~.nib
-
-local.properties
-
+# Eclipse
+.classpath
+.project
 .settings/
 
-.loadpath
+# Intellij
+.idea/
+*.iml
+*.iws
 
-.recommenders
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
+# Inclusions
+!lib/**
+
+# Compiled Files
+*.class
+bin/
+build/
+/bin1/
+java/build/**
